Drop unused search param from /hotels/within-bounds
